--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,22 @@
 Package: yarraWQ
-Title: Yarra River Water Quality Tools
-Description: Tools to explore and visualise long-term Yarra River water 
-    quality monitoring data, including helper functions and an interactive
-    Shiny app.
+Title: Yarra River Water Quality Explorer
+Version: 0.0.0.9000
 Authors@R: 
     person("Ruowei", "Li", email = "rlii0141@student.monash.edu", role = c("aut", "cre"))
+Description: Tools and Shiny app for exploring Yarra River water quality data,
+    with interactive visualization and trend analysis features.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
-Depends: R (>= 4.1.0)
+Depends: 
+    R (>= 4.1.0)
+LazyData: true
 Imports:
     dplyr,
     ggplot2,
     shiny,
+    shinythemes,
     readr,
     janitor
 Suggests:
